fixed spacing on OfficialInfo

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -91,7 +91,7 @@
   margin-right: unit2
 }
 .OfficialOffice {
-  margin: 0 0 1rem 0;
+  margin: 0;
 }
 .OfficialName {
   word-wrap: break-word;
