--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -53,6 +53,7 @@ h1,h2,h3,h4,h5,h6 {
 .HeadingSmall {
 	font-family: 'CircularStdBold', sans-serif;
 	font-size: 2rem;
+  margin: 0 0 2rem 0;
 }
 .Caption {
 	font-size: 1.1rem;
