--- a/public/master.css
+++ b/public/master.css
@@ -99,6 +99,7 @@ h6 {
 .HeadingSmall {
   font-family: 'CircularStdBold', sans-serif;
   font-size: 2rem;
+  margin: 0 0 2rem 0;
 }
 .Caption {
   font-size: 1.1rem;
@@ -763,7 +764,7 @@ label.error {
   margin-right: 16px;
 }
 .OfficialOffice {
-  margin: 0 0 1rem 0;
+  margin: 0;
 }
 .OfficialName {
   word-wrap: break-word;
